fix previous next button